--- a/HRManagement/ManagementLogic/ManagementLogic.csproj
+++ b/HRManagement/ManagementLogic/ManagementLogic.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Accounting.cs" />
     <Compile Include="BA.cs" />
     <Compile Include="Cybersecurity.cs" />
-    <Compile Include="Database.cs" />
+    <Compile Include="Data.cs" />
     <Compile Include="Design.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="HR.cs" />
