--- a/HRManagement/Managenment_Windows/Managenment_Windows.csproj
+++ b/HRManagement/Managenment_Windows/Managenment_Windows.csproj
@@ -226,6 +226,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
